--- a/html/index.html
+++ b/html/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Hello World In html file!!!!</h2>
-    
+    <h2>Hello World!</h2>    
 </body>
-<script>alert("Hello mutherfuckers");</script>
 </html>
